[project]
name = "erron-live-app"
version = "0.1.0"
description = ""
authors = [
    {name = "robiulsunnyemon",email = "robiulsunyemon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "motor (==3.6.0)",
    "beanie (>=1.25.0,<=2.0.1)",
    "livekit-api (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "erron_live_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
